Fix vh css overflow

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,9 +1,13 @@
-.container {
-  display: flex;
-}
-
 .content {
   flex-grow: 1;
   margin: 20px auto;
+  margin-left: 250px;
   padding: 30px;
+  padding-bottom: 60px;
+}
+
+@media (max-width: 768px) {
+  .content {
+    margin-left: auto;
+  }
 }
