--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,9 +1,14 @@
 .sidebar {
-  width: 250px;
+  min-width: 250px;
   background-color: #2c3e50;
   padding: 20px 0;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  overflow-y: auto;
+  z-index: 900;
 }
 
 .sidebar-header {
@@ -50,6 +55,7 @@
 @media (max-width: 768px) {
   .sidebar {
     position: fixed;
+    top: unset;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -59,7 +65,7 @@
     display: flex;
     align-items: center;
     background-color: #2c3e50;
-    z-index: 1000;
+    z-index: 900;
   }
 
   .sidebar-header {
