--- a/src/styles.css
+++ b/src/styles.css
@@ -7,13 +7,18 @@ body {
   margin: 0;
 }
 
+#layout {
+  display: flex;
+  flex-direction: row;
+}
+
 /* Detect device's preferred color scheme */
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #121212;
     color: snow;
   }
-  h1,h2,h3,h4,h5,h6{
+  h1, h2, h3, h4, h5, h6 {
     color: whitesmoke
   }
 }
@@ -23,7 +28,7 @@ body {
     background-color: #ffffff;
     color: #121212;
   }
-  h1,h2,h3,h4,h5,h6{
+  h1, h2, h3, h4, h5, h6 {
     color: #333
   }
 }
